projects/kubernetes/flux-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-petclinic-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-petclinic-service
  template:
    metadata:
      labels:
        app: spring-cloud-petclinic-service
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: spring-cloud-petclinic-service
        image: ghcr.io/ericm48-gh-org/spring-cloud-petclinic-service:2.8.46-RELEASE
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1000
          capabilities:
            drop:
              - all
        volumeMounts:
        - name: empty-log-volume
          mountPath: "./logs"
        - name: empty-config-volume
          mountPath: "/workspace/configs"
        - name: empty-secret-volume
          mountPath: "/workspace/secrets"
        - name: empty-secret-volume2
          mountPath: "/workspace/secrets2"
      volumes:
      - name: empty-log-volume
        emptyDir: {}
      - name: empty-config-volume
        emptyDir: {}
      - name: empty-secret-volume
        emptyDir: {}
      - name: empty-secret-volume2
        emptyDir: {}
