projects/kubernetes/flux-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-petclinic-service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-cloud-petclinic-service
